Implementação do javascript para página principal.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <script type="text/javascript" src="../script.js"></script>
     <title>Página Principal</title>
 </head>
 <body class="container">
     <header class="container_cabecalho">
         <nav class="navegacao">
-            <a class="links" id="link_principal" href="#">Principal</a>
+            <a class="links" id="link_principal" href="../index.html">Principal</a>
             <a class="links" id="link_cadastro" href="#">Cadastro</a>
         </nav>
         <div class="p_texto" id="titulo">Treinando</div>
@@ -18,9 +19,9 @@
     <div class="container_principal">
         <main class="container_conta">
             <div class="entradas">
-                <input class="inputs" id="numero01" type="text" placeholder="Digite um número">
-                <input class="inputs" id="numero02" type="text" placeholder="Digite um número">
-                <button class="btn" id="btn_somar">Somar</button>
+                <input class="inputs" id="numero01" type="number" placeholder="Digite um número">
+                <input class="inputs" id="numero02" type="number" placeholder="Digite um número">
+                <button class="btn" id="btn_somar" onclick="somar()">Somar</button>
             </div>
             <div class="resultados">
                 <p class="p_texto" id="p_resultado">Resultado:</p>
@@ -29,12 +30,12 @@
         </main>
         <main class="container_pokemon">        
             <div class="entradas">
-                <input class="inputs" id="id_pokemon" type="text" placeholder="ID Pokemon">
-                <button class="btn" id="btn_buscar">Buscar</button>
+                <input class="inputs" id="id_pokemon" type="number" placeholder="ID_Pokemon">
+                <button class="btn" id="btn_buscar" onclick="buscar()">Buscar</button>
             </div>
             <div class="resultados">
                 <p class="p_texto" id="nome_pk">Nome:</p>
-                <img class="imagem" src="./imagens/imagem_icone.jpg" id="imagem">
+                <img class="imagem" src="./imagens/imagem_icone.jpg" id="imagem_pk">
             </div>                
         </main>
     </div>
