Implementação do html da página de contato.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <script type="text/javascript" src="../script.js"></script>
-    <title>Página Principal</title>
+    <title>Principal</title>
 </head>
 <body class="container">
     <header class="container_cabecalho">
         <nav class="navegacao">
             <a class="links" id="link_principal" href="../index.html">Principal</a>
-            <a class="links" id="link_cadastro" href="#">Cadastro</a>
+            <a class="links" id="link_cadastro" href="../cadastro.html">Cadastro</a>
         </nav>
         <div class="p_texto" id="titulo">Treinando</div>
     </header>
