Implementação do css da página de contato, ainda necessitando de ajustes.

--- a/contato.html
+++ b/contato.html
@@ -21,9 +21,9 @@
             <div class="foto">
                 <img class="imagem" src="./imagens/imagem_icone.jpg" id="imagem_foto">    
             </div>
-            <nav class="links">
-                <a class="links" id="link_linkedin" href="#">Linkedin</a>
-                <a class="links" id="link_github" href="#">GitHub</a>
+            <nav class="links_redes">
+                <a class="links_con" id="link_linkedin" href="#">Linkedin</a>
+                <a class="links_con" id="link_github" href="#">GitHub</a>
             </nav>
         </main>
         <main class="container_formulario">
