Colocação de links e foto.

--- a/contato.html
+++ b/contato.html
@@ -19,15 +19,15 @@
     <div class="container_principal">
         <main class="container_pessoal">
             <div class="foto">
-                <img class="imagem" src="./imagens/imagem_icone.jpg" id="imagem_foto">    
+                <img class="imagem" src="../imagens/foto.jpg" id="imagem_foto">    
             </div>
             <nav class="links_redes">
-                <a class="links_con" id="link_linkedin" href="#">Linkedin</a>
-                <a class="links_con" id="link_github" href="#">GitHub</a>
+                <a class="links_con" id="link_linkedin" href="https://www.linkedin.com/in/paulo-flores-costa">Linkedin</a>
+                <a class="links_con" id="link_github" href="https://github.com/pccgaucho">GitHub</a>
             </nav>
         </main>
         <main class="container_formulario">
-            <form class="formulario">
+            <form class="formulario" action="https://target-api-simples.cyclic.app/generica" method="post">
                 <input class="inputs" nome="nome" id="ip_nome" type="text" placeholder="Nome">
                 <input class="inputs" nome="sobrenome" id="ip_sobrenome" type="text" placeholder="Sobrenome">
                 <input class="inputs" nome="email" id="ip_email" type="email" placeholder="E-mail">
