--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container_cabecalho">
         <nav class="navegacao">
             <a class="links" id="link_principal" href="../index.html">Principal</a>
-            <a class="links" id="link_cadastro" href="../cadastro.html">Cadastro</a>
+            <a class="links" id="link_cadastro" href="../contato.html">Cadastro</a>
         </nav>
         <div class="p_texto" id="titulo">Treinando</div>
     </header>
